# servicetitan-mcp

./: .gitignore  README.md  mcp-docs.md  pyproject.toml  servicetitan-mcp.py
.cursor/rules/: 00-project-structure.mdc  01-project-structure.mdc  02-python-style.mdc  03-env-config.mdc  04-tool-module-patterns.mdc  05-query-param-and-enum-mapping.mdc  06-forms-module-guide.mdc  07-inventory-module-guide.mdc  08-jobbooking-module-guide.mdc  09-jpm-module-guide.mdc
tools/: __init__.py  utils.py
tools/accounting/: __init__.py  apcredits.py  appayments.py  export.py  glaccounts.py  inventorybills.py  invoices.py  journalentries.py  payments.py  paymentterms.py  paymenttypes.py  taxzones.py
tools/crm/: __init__.py  bookingprovidertags.py  bookings.py  bulktags.py  contactmethods.py  contactpreferences.py  contacts.py  customers.py  export.py  leads.py  locations.py
tools/customerinteractions/: __init__.py  technicianrating.py
tools/dispatch/: __init__.py  appointmentassignments.py  arrivalwindows.py  businesshour.py  capacity.py  customeronly.py  export.py  nonjobappointments.py  team.py  technicianshifts.py  techniciantracking.py  zone.py
tools/equipmentsystems/: __init__.py  export.py  installedequipment.py
tools/forms/: __init__.py  form.py  formsubmission.py  jobs.py
tools/inventory/: __init__.py  adjustments.py  export.py  purchaseorders.py  purchaseordersmarkup.py  purchaseordertypes.py  receipts.py  returns.py  returntypes.py  transfers.py  trucks.py  vendors.py  warehouses.py
tools/jobbooking/: __init__.py  callreasons.py
tools/marketing/: __init__.py  (+4 more)
(+82 files in other folders)
